--- a/Secrets.toml.example
+++ b/Secrets.toml.example
@@ -1,1 +1,3 @@
-SERVE_STATIC_FILES = true
+# this isn't really a "secret", but this is the easiest way to have different config
+# for development and production
+SERVE_STATIC_FILES = "true"
