--- a/api/shuttle-rocket/Cargo.toml
+++ b/api/shuttle-rocket/Cargo.toml
@@ -8,9 +8,12 @@ publish = false
 
 [dependencies]
 shuttle-runtime = "0.16.0"
-rocket = "0.5.0-rc.3"
+rocket = { version = "0.5.0-rc.3", features = ["json"] }
 shuttle-rocket = "0.16.0"
 tokio = "1.27.0"
-services = { path = "../services" }
+core = { path = "../core" }
 shuttle-secrets = "0.16.0"
 shuttle-static-folder = "0.16.0"
+sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "offline"] }
+shuttle-shared-db = { version = "0.16.0", features = ["postgres"] }
+
