--- a/Secrets.toml.example
+++ b/Secrets.toml.example
@@ -1,3 +1,9 @@
 # this isn't really a "secret", but this is the easiest way to have different config
 # for development and production
 SERVE_STATIC_FILES = "true"
+
+# A secret key for signing cookies
+# To generate a secret key, run `head -c64 /dev/urandom | base64` in a shell
+# Don't use the one below, it's just an example from the rocket docs.
+# See https://api.rocket.rs/v0.5-rc/rocket/config/struct.SecretKey.html for more info
+SECRET_KEY = "hPrYyЭRiMyµ5sBB1π+CMæ1køFsåqKvBiQJxBVHQk="
