--- a/api/core/Cargo.toml
+++ b/api/core/Cargo.toml
@@ -11,3 +11,4 @@ secrecy = "0.8.0"
 serde = { version = "1.0.163", features = ["derive"] }
 sqlx = { version = "0.6.3", features = ["migrate", "macros", "offline", "chrono", "runtime-tokio-native-tls", "postgres"] }
 thiserror = "1.0.40"
+argon2 = "0.5.0"
